--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,8 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Ana's Profile</title>
+    <title>Ana's Portfolio</title>
     <link href="style.css" rel="stylesheet"/>
 </head>
 
@@ -15,9 +15,7 @@
 
         <div class="container1" id="introHeaderContainer">
             <div class="container1" id="introHeader">
-                <h3 id="header1">HELLO!</h3>
-                <h1 id="header2">I'm Ana Carrocci</h1>
-                <h3 id="header1">Computer Science Student</h3>
+                <h1 id="header2">Portfolio</h1>
             </div>
         </div>
     </div>
@@ -27,6 +25,21 @@
             <a href="../index.html"><h3 class="button">Home</h3></a>
             <a href="../resume.html"><h3 class="button">Resume</h3></a>
         </div>
+    </div>
+
+    <div class="toolBarContainer">
+        <a href="../flascard.html"><h3 class="toolBar" id="flashButton">Flascards</h3></a>
+        <a href="../fastCheckOut.html"><h3 class="toolBar" id="fastButton">Fast Cheachout Library</h3></a>
+    </div>
+
+    <div class="videoFlascards">
+        <iframe id="videoflash" width="320" height="220" src="https://www.youtube.com/embed/Yzdd9Zih410"
+                frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+
+    <div class="videoFastCheckOut">
+        <iframe id="videofastCheck" width="320" height="220" src="https://www.youtube.com/embed/Yzdd9Zih410"
+                frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 
 </body>
