--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="toolBarContainer">
-        <a href="../flascard.html"><h3 class="toolBar" id="flashButton">Flascards</h3></a>
+        <a href="../flashcard.html"><h3 class="toolBar" id="flashButton">Flashcards</h3></a>
         <a href="../fastCheckOut.html"><h3 class="toolBar" id="fastButton">Fast Cheachout Library</h3></a>
     </div>
 
