--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -48,6 +48,7 @@
                 <li class="skillsBulletPoints"> Highly motivated, organized, goal orientated with well-developed communications skills in English and Spanish (native).</li>
             </ul>
         </div>
+    </div>
 
         <h2 class="resumeHeaders" id="techExperienceHeader">Technical Experience</h2>
         <div class="techSkillsContent">
@@ -70,7 +71,7 @@
             <h5 class="educationHeaders">Master in International Business Law (2013 - 2014)</h5>
             <h6 class="educationHeaders1">University of Barcelona, Spain.</h6>
             <h5 class="educationHeaders">Bachelor of Law (2007 -  2012)</h5>
-            <h6 class="educationHeaders1">Universidad Catolica Andres Bello, Venezuela.</h6>
+            <h6 class="educationHeaders1">Andres Bello University, Venezuela.</h6>
         </div>
 
         
