--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="container2">
-        <div class="container2">
+        <div id="mainButtonContainer">
             <a href="../resume.html"><h3 class="button">Resume</h3></a>
             <a href="../portfolio.html"><h3 class="button">Portfolio</h3></a>
         </div>
