--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="container2">
-        <div class="container2">
+        <div id="mainButtonContainer">
             <a href="../index.html"><h3 class="button">Home</h3></a>
             <a href="../resume.html"><h3 class="button">Resume</h3></a>
         </div>
@@ -47,9 +47,8 @@
         </div>
     </div>
 
-    <div class="toolBarContainer">
+    <div id="toolBarContainer">
         <a href="../flashcard.html"><h3 class="toolBar" id="flashButton">More Info</h3></a>
-        <a href="../fastCheckOut.html"><h3 class="toolBar" id="fastButton">More Info</h3></a>
     </div>
 
 </body>
