--- a/diagram.html
+++ b/diagram.html
@@ -32,14 +32,14 @@
         </div>
 
         <div class="toolBarContainer">
-            <a href="../portfolio.html"><h3 class="toolBar" id="fastButton">Back to Portfolio</h3></a>
+            <a href="../portfolio.html"><h3 class="toolBar" id="backToPortfolioButton">Back to Portfolio</h3></a>
         </div>
 
         <div class="flascardContainer">
-            <a href="diagram.html"><h4 class="flashButton">Diagrams</h4></a>
-            <a href="estimation.html"><h4 class="flashButton">Effort Estimation</h4></a>
-            <a href="sketches.html"><h4 class="flashButton">Sketches</h4></a>
-            <a href="storyBoard.html"><h4 class="flashButton">Story Board</h4></a>
+            <a href="diagram.html"><h4 class="flashcardToolBarButtons">Diagrams</h4></a>
+            <a href="estimation.html"><h4 class="flashcardToolBarButtons">Effort Estimation</h4></a>
+            <a href="sketches.html"><h4 class="flashcardToolBarButtons">Sketches</h4></a>
+            <a href="storyBoard.html"><h4 class="flashcardToolBarButtons">Story Board</h4></a>
         </div>
 
         <div class="slideshow-container">
