--- a/flashcard.html
+++ b/flashcard.html
@@ -30,14 +30,14 @@
         </div>
 
         <div class="toolBarContainer">
-            <a href="../portfolio.html"><h3 class="toolBar" id="fastButton">Back to Portfolio</h3></a>
+            <a href="../portfolio.html"><h3 class="toolBar" id="backToPortfolioButton">Back to Portfolio</h3></a>
         </div>
 
         <div class="flascardContainer">
-            <a href="diagram.html"><h4 class="flashButton" id="diaButton">Diagram</h4></a>
-            <a href="estimation.html"><h4 class="flashButton" id="estiButton">Effort Estimation</h4></a>
-            <a href="sketches.html"><h4 class="flashButton" id="skeButton">Sketches</h4></a>
-            <a href="storyBoard.html"><h4 class="flashButton" id="stoButton">Story Board</h4></a>
+            <a href="diagram.html"><h4 class="flashcardToolBarButtons">Diagram</h4></a>
+            <a href="estimation.html"><h4 class="flashcardToolBarButtons">Effort Estimation</h4></a>
+            <a href="sketches.html"><h4 class="flashcardToolBarButtons">Sketches</h4></a>
+            <a href="storyBoard.html"><h4 class="flashcardToolBarButtons">Story Board</h4></a>
         </div>
     </div>
 
