--- a/portfolio.html
+++ b/portfolio.html
@@ -28,28 +28,30 @@
             </div>
         </div>
 
-        <div id="videoHeadersContainer">
-            <div id="flashHeaderContainer">
-                <h2>Flashcards</h2>
+        <div id="wrapVideosHeadersAndToolBar">
+            <div id="videoHeadersContainer">
+                <div id="flashHeaderContainer">
+                    <h2>Flashcards</h2>
+                </div>
+                <div id="fastCheckoutHeaderContainer">
+                    <h2>Fast Checkout Library</h2>
+                </div>
             </div>
-            <div id="fastCheckoutHeaderContainer">
-                <h2>Fast Checkout Library</h2>
-            </div>
-        </div>
 
-        <div id="videosContainer">
-            <div id="videoFlascardsContainer">
-                <iframe id="videoFlascardsContainer" width="440" height="360" src="https://www.youtube.com/embed/YWJduPFAE-w"
-                        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <div id="videosContainer">
+                <div id="videoFlascardsContainer">
+                    <iframe id="videoFlascardsContainer" width="440" height="360" src="https://www.youtube.com/embed/YWJduPFAE-w"
+                            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
+                <div id="videoFastCheckOutContainer">
+                    <iframe id="videoFastCheckOutContainer" width="440" height="360" src="https://www.youtube.com/embed/Yzdd9Zih410"
+                            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
             </div>
-            <div id="videoFastCheckOutContainer">
-                <iframe id="videoFastCheckOutContainer" width="440" height="360" src="https://www.youtube.com/embed/Yzdd9Zih410"
-                        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            </div>
-        </div>
 
-        <div id="toolBarContainer">
-            <a href="../flashcard.html"><h3 class="toolBar" id="flashButton">More Info</h3></a>
+            <div id="toolBarContainer">
+                <a href="../flashcard.html"><h3 class="toolBar">More Info</h3></a>
+            </div>
         </div>
     </div>
 </body>
