--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
                             frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
                 <div id="videoFastCheckOutContainer">
-                    <iframe id="videoFastCheckOutContainer" width="440" height="360" src="https://www.youtube.com/embed/Yzdd9Zih410"
+                    <iframe id="videoFastCheckOutContainer" width="440" height="360" src="https://www.youtube.com/embed/KqALwn3h5bg"
                             frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
