--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="myPicContainer">
-            <img class="myPicContainer" id="mypic" src="https://media-exp2.licdn.com/mpr/mpr/shrinknp_400_400/p/1/000/210/008/3143dce.jpg">
+            <img class="myPicContainer" with="200" height="180" src="../images/myPic.png">
         </div>
     </div>
 
