--- a/resume.html
+++ b/resume.html
@@ -54,10 +54,10 @@
             <div id="techSkillsContentContainer">
                 <h2 class="resumeHeaders">Technical Experience</h2>
                 <ul>
-                    <li class="skillsBulletPoints">Object Oriented Language: Java, Python, C++, C#</li>
+                    <li class="skillsBulletPoints">Object Oriented Language: Java, Python, C, C#, HTML, CSS, JS</li>
                     <li class="skillsBulletPoints">Functional Languages: Haskell, Prolog</li>
                     <li class="skillsBulletPoints">Assembly Language: x86, Arm Assembly</li>
-                    <li class="skillsBulletPoints">Integrated Development Environment Tools: Eclipse IDE, MS Visual Studio, Android Studio, IntelliJ, GitHub, XAMPP, phpMyAdmin</li>
+                    <li class="skillsBulletPoints">Integrated Development Environment Tools: Eclipse IDE, MS Visual Studio, Android Studio, IntelliJ, CLion, GitHub, XAMPP, phpMyAdmin</li>
                     <li class="skillsBulletPoints">Methodologies: Agile, UML, Class Diagrams, Use Case Diagrams</li>
                     <li class="skillsBulletPoints">Operating Systems: Linux, Windows, Mac OS X, Virtual Machine</li>
                     <li class="skillsBulletPoints">Microsoft Office: Word, Power Point, Excel, Project</li>
